Create a basic modal to choose a medical test

--- a/src/styles/components/General.styl
+++ b/src/styles/components/General.styl
@@ -6,7 +6,7 @@ accent-color = #FF9331
 dark-background-text = #444444
 secondary-text-color = #757575
 divider-color = #BDBDBD
-white-color = #FFFFFF
+secondary-color = #FFFFFF
 
 //Type system
 .headline1
