[ADD] Header component

--- a/src/styles/components/General.styl
+++ b/src/styles/components/General.styl
@@ -6,7 +6,13 @@ accent-color = #FF9331
 dark-background-text = #444444
 secondary-text-color = #757575
 divider-color = #BDBDBD
-white-color = #FFFFFF
+secondary-color = #FFFFFF
+
+body
+    font-family: 'Roboto', sans-serif;
+    height: 100vh
+    margin: 0
+    padding: 0
 
 //Type system
 .headline1
