--- a/src/styles/components/RegisterForm.styl
+++ b/src/styles/components/RegisterForm.styl
@@ -1,10 +1,24 @@
+@import General
+
 .registerCard
-  width: 60%
-  border: 1px solid black
+  width: 40%
   text-align: center
   padding: 40px
+  color: dark-background-text
+  border: 1px solid dark-background-text
 
   &__form
     display: grid
+    text-align: left
+    grid-gap: 10px
 
-    
+    label 
+      display: grid
+  
+  &__submitButtom
+    margin-top: 20px
+    background-color: accent-color
+
+
+
+
