--- a/src/styles/components/ExamModal.styl
+++ b/src/styles/components/ExamModal.styl
@@ -3,7 +3,8 @@
 body
   display: flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
+  background-color: light-primary-color 
 
   .modal
     background-color: secondary-color
