--- a/src/styles/components/ExamModal.styl
+++ b/src/styles/components/ExamModal.styl
@@ -6,14 +6,14 @@ body
   align-items: center;
   background-color: light-primary-color 
 
-  .modal
+  .examsModal
     background-color: secondary-color
     width: 300px
     padding: 40px 50px
     border-radius: 25px
     position relative
 
-    .material-icons
+    &__closeIcon
       position absolute
       top 24px
       right: 34px
