[FIX] Missing files and styles

--- a/src/styles/components/Login.styl
+++ b/src/styles/components/Login.styl
@@ -1,11 +1,5 @@
 @import 'General.styl'
 
-body
-  display flex
-  justify-content center
-  align-items center
-  // flex-direction: row
-
 .Login
   display flex
   justify-content flex-start
@@ -16,6 +10,8 @@ body
   padding 25px
   color secondary-color
   min-height 250px
+  max-width 250px
+  margin 25px
 
   &__title
     text-transform uppercase
