--- a/src/styles/components/Footer.styl
+++ b/src/styles/components/Footer.styl
@@ -5,7 +5,7 @@
   justify-content center
   align-items center
   flex-wrap wrap
-  background-color primary-color
+  background-color dark-primary-color
   color secondary-color
   font-weight 600
   padding 10px 0
