[ADD] Creates a home page for admin users

--- a/src/styles/components/Table.styl
+++ b/src/styles/components/Table.styl
@@ -1,13 +1,8 @@
 @import 'General.styl'
 
-body
-  display flex
-  justify-content center
-  align-items center
-  flex-direction: row
-
 .Table
   font-size 16px
+  margin: 20px
   overflow: hidden
   border-spacing 0
   border-collapse collapse
