[ADD] Inserts an action bar to the table in AdminUserHome page

--- a/src/styles/pages/AdminUserHome.styl
+++ b/src/styles/pages/AdminUserHome.styl
@@ -2,3 +2,14 @@
 .userHome__container
   display: grid
   grid-template-columns: 0.3fr 1fr 0.3fr
+
+
+
+.userHome__tableActions
+  display: flex
+  justify-content: space-between
+
+  &__filter
+    display: grid
+    grid-template-columns: 1fr 1fr
+    align-items: center
