--- a/src/styles/components/Table.styl
+++ b/src/styles/components/Table.styl
@@ -1,8 +1,8 @@
 @import 'General.styl'
 
 .Table
+  width: 100%
   font-size 16px
-  margin: 20px
   overflow: hidden
   border-spacing 0
   border-collapse collapse
