[ADD] Creates a general modal component and set redux config

--- a/src/styles/components/ConfirmationModal.styl
+++ b/src/styles/components/ConfirmationModal.styl
@@ -1,17 +1,11 @@
 @import 'General.styl'
 
 .confirmationModal
-  position relative
   text-align: center
-  width: 300px
+  width: 80%
   padding: 40px 50px
   border-radius: 25px
   background-color: secondary-color
-
-  &__closeIcon
-    position absolute
-    top 24px
-    right: 34px
 
   &__warningIcon
     font-size: 64px
