[UPDATE] several basic components

--- a/src/styles/components/Button.styl
+++ b/src/styles/components/Button.styl
@@ -6,9 +6,10 @@
   border-radius 5px
   color secondary-color
   font-weight 600
-  padding 10px 50px
+  padding 8px 48px
   text-transform: uppercase
   margin 15px
+  border 2px solid accent-color
 
   &:hover
      background-color secondary-color
