--- a/src/styles/components/General.styl
+++ b/src/styles/components/General.styl
@@ -7,12 +7,14 @@ dark-background-text = #444444
 secondary-text-color = #757575
 divider-color = #BDBDBD
 secondary-color = #FFFFFF
+background-light-color = #F5F5F5
 
 body
-    font-family: 'Roboto', sans-serif;
-    height: 100vh
-    margin: 0
-    padding: 0
+  font-family: 'Roboto', sans-serif;
+  height: 100vh
+  margin: 0
+  padding: 0
+  background-color background-light-color
 
 //Type system
 .headline1
