[UPDATE] Gives some styles to AdminUserHome page

--- a/src/styles/pages/AdminUserHome.styl
+++ b/src/styles/pages/AdminUserHome.styl
@@ -1,15 +1,29 @@
 
-.userHome__container
+.userHome
+  height 85vh
   display: grid
-  grid-template-columns: 0.3fr 1fr 0.3fr
+  grid-template-columns: 0.2fr 1fr
+  max-width: 1400px
+  margin: 0px auto
 
+  &__table
+    padding: 15px 20px
 
+  &__tableContainer
+    max-height: 60vh
+    overflow-y: scroll 
 
-.userHome__tableActions
-  display: flex
-  justify-content: space-between
+  &__tableActions
+    display: flex
+    justify-content: space-between
 
-  &__filter
-    display: grid
-    grid-template-columns: 1fr 1fr
-    align-items: center
+    &__filter
+      width: 300px
+      display: flex
+      justify-content: space-between
+      align-items: center
+      
+      input
+        height 26px
+        width: 50%
+
