--- a/src/styles/components/SideMenu.styl
+++ b/src/styles/components/SideMenu.styl
@@ -1,7 +1,7 @@
 @import General
 
 .sideMenu
-  width: 200px
+  padding: 15px 20px
 
   &__title
     margin-bottom: 10px
@@ -9,6 +9,7 @@
   &__link
     display: flex
     align-items: center
+    margin: 5px 0
   
     
 
