[UPDATE] Gives some styles to Register Page

--- a/src/styles/pages/AdminUserHome.styl
+++ b/src/styles/pages/AdminUserHome.styl
@@ -17,6 +17,12 @@
     display: flex
     justify-content: space-between
 
+    div
+      display: grid
+      grid-template-columns: 1fr 1fr
+      grid-column-gap: 10px
+      
+
     &__filter
       width: 300px
       display: flex
@@ -25,5 +31,5 @@
       
       input
         height 26px
-        width: 50%
+        
 
