--- a/src/styles/pages/Register.styl
+++ b/src/styles/pages/Register.styl
@@ -1,5 +1,20 @@
+@import '../components/General.styl';
+
 .registerContainer
-  width: 70%
-  margin: auto
+  position: relative
   
+  &__form
+    max-width 600px
+    margin: 0 auto
   
+  &__goBack
+    display: flex
+    align-items: center
+    position: absolute
+    background-color: accent-color
+    color white
+    padding: 10px 15px
+    border-radius: 40px
+    
+    left: 60px
+    
