--- a/src/styles/components/Button.styl
+++ b/src/styles/components/Button.styl
@@ -2,13 +2,14 @@
 
 .Button
   background-color accent-color
+  width: 100%
   border 0
   border-radius 5px
   color secondary-color
   font-weight 600
   padding 10px 50px
   text-transform: uppercase
-  margin 15px
+  margin 15px 0
 
   &:hover
      background-color secondary-color
@@ -16,6 +17,25 @@
      color accent-color
      box-shadow 0 4px 16px accent-color
      transition all 0.2s ease;
+
+  &.warningBtn
+    background-color: red
+    &:hover
+      background-color secondary-color
+      border 2px solid red
+      color red
+      box-shadow 0 4px 16px red
+      transition all 0.2s ease;
+
+  &.cancelBtn
+    background-color: #757575
+    &:hover
+      background-color:divider-color
+      border 2px solid #757575
+      color dark-background-text
+      box-shadow 0 4px 16px divider-color
+      transition all 0.2s ease;
+
 
   &:disabled
     background-color secondary-text-color
