--- a/src/styles/components/ConfirmationModal.styl
+++ b/src/styles/components/ConfirmationModal.styl
@@ -2,8 +2,7 @@
 
 .confirmationModal
   text-align: center
-  width: 80%
-  padding: 40px 50px
+  padding: 30px
   border-radius: 25px
   background-color: secondary-color
 
@@ -12,7 +11,10 @@
     color: red
 
   &__btn
-    margin-top: 28px
+    display: grid
+    grid-template-columns: 1fr 1fr
+    grid-column-gap: 10px
+    /* margin-top: 28px */
     
     &--warning
       background-color: red
