--- a/src/styles/components/Modal.styl
+++ b/src/styles/components/Modal.styl
@@ -6,15 +6,14 @@
   right: 0;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
 
   &__container 
-    position: relative;
-    top: 10rem;
+    position: relative
     background-color: #ffffff;
     padding: 1rem;
-    width: 800px;
+    /* width: 800px; */
 
 
   &__close-button 
