[UPDATE] styles of basic components

--- a/src/styles/components/Footer.styl
+++ b/src/styles/components/Footer.styl
@@ -8,5 +8,6 @@
   background-color dark-primary-color
   color secondary-color
   font-weight 600
-  padding 10px 0
+  font-size 14px
+  // padding 10px 0
   width 100%
