--- a/src/styles/components/MedicalHistoryItem.styl
+++ b/src/styles/components/MedicalHistoryItem.styl
@@ -5,6 +5,6 @@
   
   &__description
     border: solid 1px light-primary-color
-    background-color: light-primary-color
-    padding: 0 20px
-    border-radius: 20px
+    background-color: background-light-color
+    padding: 15px
+    border-radius: 10px
