--- a/src/styles/components/Button.styl
+++ b/src/styles/components/Button.styl
@@ -8,7 +8,8 @@
   font-weight 600
   padding 8px 48px
   text-transform: uppercase
-  margin 15px
+  // margin 15px
+  width 100%
   border 2px solid accent-color
 
   &:hover
