--- a/src/styles/components/MedicalHistoryForm.styl
+++ b/src/styles/components/MedicalHistoryForm.styl
@@ -7,6 +7,7 @@
   color: dark-background-text
   border: 1px solid dark-background-text
   text-align: center
+  font-size 14px
 
   &__form
     display: grid
@@ -24,8 +25,13 @@
 
     a
       margin-left: 20px
-  
+      color accent-color
+      font-weight 500
+
+    a:hover
+      color dark-primary-color
+
   &__submitBtn
     background-color: accent-color
-    margin-top: 20px
+    margin: 20px 0
 
