[UPDATE] Gives some styles to the table component

--- a/src/styles/components/SideMenu.styl
+++ b/src/styles/components/SideMenu.styl
@@ -7,9 +7,13 @@
     margin-bottom: 10px
 
   &__link
+    cursor: pointer
     display: flex
     align-items: center
     margin: 5px 0
+
+    &:hover
+      color: accent-color
   
     
 
