--- a/src/styles/components/Footer.styl
+++ b/src/styles/components/Footer.styl
@@ -7,6 +7,7 @@
   flex-wrap wrap
   background-color dark-primary-color
   color secondary-color
+  padding: 10px 0
   font-weight 600
   font-size 14px
   width 100%
