--- a/src/styles/pages/Login.styl
+++ b/src/styles/pages/Login.styl
@@ -2,7 +2,7 @@
 
 .Login
   display flex
-  height 94vh
+  height 96vh
 
   &__info
     background-color primary-color
@@ -28,8 +28,8 @@
     align-items center
 
 
-.Footer
+/* .Footer
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 40px;
+  height: 40px; */
