[FIX] Modifies some general styles due to integration

--- a/src/styles/components/Header.styl
+++ b/src/styles/components/Header.styl
@@ -9,6 +9,7 @@
   color secondary-color
   padding 10px 0
   width 100%
+  box-shadow: 4px 13px 5px -6px #bdbdbd;
 
   &__logo
     margin-left 50px
