--- a/src/styles/components/MedicalHistoryItem.styl
+++ b/src/styles/components/MedicalHistoryItem.styl
@@ -2,6 +2,9 @@
 
 .MedicalHistoryItem
   text-align: left
+
+  p
+    margin: 5px 0px
   
   &__description
     border: solid 1px light-primary-color
