--- a/src/styles/components/RegisterForm.styl
+++ b/src/styles/components/RegisterForm.styl
@@ -1,11 +1,11 @@
 @import General
 
 .registerCard
-  margin: 20px 0px
   text-align: center
   padding: 40px
   color: dark-background-text
-  border: 1px solid dark-background-text
+  background-color: secondary-color
+  box-shadow: 4px 13px 5px -6px #bdbdbd;
   
   &__title
     margin-top: 0px
