--- a/src/styles/pages/AdminUserHome.styl
+++ b/src/styles/pages/AdminUserHome.styl
@@ -1,9 +1,9 @@
 
 .userHome
-  // height 85vh
   display: grid
   grid-template-columns: 0.2fr 1fr
-  max-width: 1400px
+  width: 90%;
+  max-width: 1400px;
   margin: 0px auto
 
   &__table
