--- a/src/styles/pages/Register.styl
+++ b/src/styles/pages/Register.styl
@@ -2,6 +2,9 @@
 
 .registerContainer
   position: relative
+  width: 90%;
+  margin: 0 auto;
+  padding-top: 25px;
   
   &__form
     max-width 600px
