--- a/src/styles/components/Layout.styl
+++ b/src/styles/components/Layout.styl
@@ -1,14 +1,14 @@
 .background
-  width: 20%
+  width: 300px
   position: fixed
-  bottom: 60px
+  bottom: 0px
   left:-2%
-  z-index -1
-  
+  z-index -2
+
 .App
   height 100vh
   display: grid
-  grid-template-rows: 0.15fr 1fr 0.05fr
+  grid-template-rows: 0.1fr 1fr 0.05fr
 
 
      
