--- a/src/styles/components/MedicalHistoryForm.styl
+++ b/src/styles/components/MedicalHistoryForm.styl
@@ -9,6 +9,11 @@
   text-align: center
   font-size 14px
 
+  &__title
+    h1 
+      margin-top: 0px
+    
+
   &__form
     display: grid
     grid-template-columns: 1fr 1fr
@@ -17,11 +22,20 @@
 
     label 
       display: grid
+      font-size: 16px
+
+      input 
+        height 30px
+        margin-top: 5px
 
   &__previousVisits__title
     display: flex
     justify-content: space-between
     align-items: baseline
+    margin-top: 5px
+
+    h2 
+      margin-bottom: 5px
 
     a
       margin-left: 20px
