--- a/src/styles/pages/MedicalSearchView.styl
+++ b/src/styles/pages/MedicalSearchView.styl
@@ -1,16 +1,17 @@
 @import '../components/General.styl';
 
+.cardSearchContainer
+  width 70%
+  margin: 0 auto
+
 .Search__container
   display flex
   justify-content flex-start
   align-items center
   flex-direction column
   background-color white
-  height 300px
-  width 60%
-  margin-top 10%
-  margin-left 20%
-  padding 25px 50px
+  margin: 8% 0px
+  padding 35px 50px
   box-shadow: 4px 13px 5px -6px divider-color
   color secondary-text-color
 
@@ -20,3 +21,15 @@
 
   input
     padding 5px 0
+
+.Search__form
+    display: flex
+    align-items: center
+
+    input
+      height 20px
+      width 200px
+      margin-right: 10px
+      
+
+  
