[FIX] Modifies some styles in MedicalUserExams page

--- a/src/styles/pages/MedicalUserExams.styl
+++ b/src/styles/pages/MedicalUserExams.styl
@@ -1,51 +1,55 @@
 @import '../components/General.styl';
 
 .Container
-  display inline-flex
+  position: relative
+  width: 90%
+  margin 0 auto
+  padding-top: 25px
 
-aside
-  display inline-flex
-  flex-direction: column
-  color dark-primary-color
-  margin 0 25px
-  max-width 200px
-  height 300px
+  aside
+    display inline-flex
+    flex-direction: column
+    color dark-primary-color
+    margin 0 25px
+    width: 20%
+    /* max-width 200px
+    height 300px */
 
-main
-  display flex
-  flex-direction column
-  background-color secondary-color
-  color dark-background-text
-  align-items center
-  min-width 250px
-  width 50%
-  padding 25px 50px
-  margin 50px auto
-  border-radius 5px
+  main
+    display inline-flex
+    flex-direction column
+    background-color secondary-color
+    color dark-background-text
+    align-items center
+    min-width 250px
+    width 50%
+    padding 25px 50px
+    margin 25px auto
+    border-radius 5px
 
-  h2
-    font-weight 300
-  p
-    margin 0
+    h2
+      font-weight 300
+    p
+      margin 0
 
-  span
-    font-size 14px
+    span
+      font-size 14px
 
-  table
-    width: 100%
-    font-size 14px
-    border-spacing 0
-    border-collapse collapse
-    position: relative
-    margin 25px 0
+    table
+      width: 100%
+      font-size 14px
+      border-spacing 0
+      border-collapse collapse
+      position: relative
+      margin 25px 0
 
-    tr
-      text-align center
-      font-weight 400
-      border-bottom 2px solid divider-color
+      tr
+        text-align center
+        font-weight 400
+        border-bottom 2px solid divider-color
 
-      td
-        padding 10px
+        td
+          padding 10px
 
 .Actions_button
   color dark-primary-color
