[FIX] Upgrades some styles in general

--- a/src/styles/components/Header.styl
+++ b/src/styles/components/Header.styl
@@ -19,10 +19,16 @@
 
   &__userInformation
     display flex
+    justify-content: space-between
+    align-items: center
+    margin-right 50px
     p
       padding-right 10px
       text-align right
 
-
   &__userIcon
-    margin-right 50px
+    margin-right 16px
+
+a:visited {
+  color: white;
+}
