--- a/src/styles/pages/MedicalUserExams.styl
+++ b/src/styles/pages/MedicalUserExams.styl
@@ -6,6 +6,16 @@
   margin 0 auto
   padding-top: 25px
 
+  &__buttonAction
+    display: flex
+    align-items: center
+    position: absolute
+    background-color: accent-color
+    color white
+    padding: 10px 15px
+    border-radius: 40px 
+    margin-left: 25px
+    
   aside
     display inline-flex
     flex-direction: column
