--- a/src/styles/pages/MedicalViewUSerInfo.styl
+++ b/src/styles/pages/MedicalViewUSerInfo.styl
@@ -24,9 +24,9 @@
     border-radius: 40px 
     margin-left: 25px
 
-    :first-child {
+    /* :first-child {
       font-size 20px
-    }
+    } */
 
   &__asideTitle
     font-weight 400
