--- a/src/styles/components/Button.styl
+++ b/src/styles/components/Button.styl
@@ -21,6 +21,7 @@
 
   &.warningBtn
     background-color: red
+    border 2px solid red
     &:hover
       background-color secondary-color
       border 2px solid red
@@ -30,6 +31,7 @@
 
   &.cancelBtn
     background-color: #757575
+    border 2px solid #757575
     &:hover
       background-color:divider-color
       border 2px solid #757575
@@ -40,6 +42,6 @@
 
   &:disabled
     background-color secondary-text-color
+    border 2px solid secondary-text-color
     box-shadow none
     color secondary-color
-    border 0
