[ADD] Creates the bacteriologist main site

--- a/src/styles/components/SearchBox.styl
+++ b/src/styles/components/SearchBox.styl
@@ -1,15 +1,8 @@
 @import '../components/General.styl';
   
 .Search__container
-  display flex
-  justify-content flex-start
-  align-items center
-  flex-direction column
-  background-color white
-  margin: 8% 0px
-  padding 35px 50px
-  box-shadow: 4px 13px 5px -6px divider-color
-  color secondary-text-color
+  width: 40%
+  text-align: center
 
   h2
     letter-spacing 0.1em
@@ -24,8 +17,11 @@
 
     input
       height 20px
-      width 200px
+      width 90%
       margin-right: 10px
+
+    &__button
+      /* width: 30% */
 
 .Text__error
   color red
