--- a/src/styles/pages/MedicalSearchView.styl
+++ b/src/styles/pages/MedicalSearchView.styl
@@ -1,6 +1,15 @@
 @import '../components/General.styl';
 
-.cardSearchContainer
+.searchContainer
   width 70%
-  margin: 0 auto
+  margin: 50px auto
 
+.searchCard
+  display: grid;
+  grid-row-gap: 20px
+  align-items: center;
+  justify-items: center;
+  background-color: #fff;
+  padding: 35px 50px;
+  box-shadow: 4px 13px 5px -6px #bdbdbd;
+  color: #757575;
