--- a/src/styles/pages/UploadExamResults.styl
+++ b/src/styles/pages/UploadExamResults.styl
@@ -1,15 +1,11 @@
 @import '../components/General.styl';
 
-.registerContainer
-  position: relative
+.resultsContainer 
+  position: relative;
   width: 90%;
   margin: 0 auto;
   padding-top: 25px;
-  
-  &__form
-    max-width 600px
-    margin: 0 auto
-  
+
   &__goBack
     display: flex
     align-items: center
