[ADD] table styles

--- a/src/styles/pages/PatientExams.styl
+++ b/src/styles/pages/PatientExams.styl
@@ -1,1 +1,29 @@
 @import '../components/General.styl';
+
+.Patient-info
+  color dark-primary-color
+  text-align center
+
+hr
+  width 100%
+  margin-top 25px
+  color divider-color
+
+table
+  color dark-background-text
+
+thead
+  color dark-primary-color
+  text-align center
+  > td
+    padding 10px 0
+
+
+span.activeIcon
+  color accent-color
+  pointer-events: none
+
+tr.pending-exam > td
+  color divider-color
+  > span.material-icons
+     pointer-events: none
