--- a/src/styles/components/Header.styl
+++ b/src/styles/components/Header.styl
@@ -32,3 +32,18 @@
 a:visited {
   color: white;
 }
+
+@media (max-width: 700px)
+
+  .Header
+
+    p
+      display: none
+
+    &__logo
+      margin-left 10px
+
+    &__userInformation
+      margin-right: 0px
+
+      
