--- a/src/styles/components/Table.styl
+++ b/src/styles/components/Table.styl
@@ -1,7 +1,7 @@
 @import 'General.styl'
 
 .container
-  max-height: 65vh
+  max-height: 64vh
   overflow-y: scroll
 
 .Table
@@ -45,3 +45,60 @@
   color accent-color
   cursor pointer
 
+
+@media (max-width: 1250px)
+  .Table
+    &__header__Celular
+      display: none
+
+  .cell_phone
+      display: none
+ 
+
+@media (max-width: 700px)
+
+  .Table
+    
+    thead
+      display: none  
+
+    tr 
+      display: grid
+      grid-template-areas: "id state actions" "name cellphone actions"  
+      grid-template-columns: 0.4fr 0.4fr 0.2fr
+      grid-template-rows: auto auto
+      border-bottom: 2px solid divider-color
+
+    td 
+      padding: 8px
+
+    &__cell
+      border-bottom: 0px
+
+      &.cell_email
+        display: none
+      &.cell_role
+        display: none
+      &.cell_cedula
+        grid-area:id
+      &.cell_name
+        font-weight: bold
+        grid-area:name
+      &.cell_state
+        grid-area:state
+      &.cell_phone
+        display: block
+        grid-area:cellphone
+
+    &__actions
+      text-align center
+      border-bottom: 0px
+
+      &.cell_actions
+        grid-area:actions
+        align-self: center    
+
+
+
+    
+  
