[ADD] Makes responsive bacteriologist search box and exams table

--- a/src/styles/pages/BacteriologistHome.styl
+++ b/src/styles/pages/BacteriologistHome.styl
@@ -1,5 +1,5 @@
 .bactContainer 
-  width 70%
+  width: 90%
   margin 50px auto
 
 .bactCardContainer
@@ -14,3 +14,8 @@
 
   hr     
     width: 90%
+
+@media (min-width: 900px)
+  .bactContainer
+    width: 70%
+
