--- a/src/styles/components/ExamsTable.styl
+++ b/src/styles/components/ExamsTable.styl
@@ -1,3 +1,5 @@
+@import 'General.styl'
+
 .tableContainer
   width: 90%
   margin: 0 auto
@@ -9,5 +11,58 @@
     h3 
       margin: 0px
 
-.Table
+.examsTable
   margin: 20px 0
+  width: 100%
+  font-size 16px
+  border-spacing 0
+  border-collapse collapse
+  color dark-background-text
+  position: relative
+
+  th
+    text-align: start
+    font-weight 400
+    padding 15px 20px
+    position: sticky;
+    top: 0
+    color secondary-color
+    background-color primary-color
+    box-shadow 0 3px 3px divider-color
+  
+  &__cell
+    border-bottom 2px solid divider-color
+    font-size 14px
+    padding 15px 20px
+
+@media (max-width: 700px)
+  .examsTable
+
+    thead 
+      display: none
+
+    tr
+      display: grid;
+      grid-template-areas: "date status" "type status";
+      grid-template-columns: 0.8fr 0.2fr
+      grid-template-rows: auto auto;
+      justify-content: center
+      padding: 5px 0px
+      border-bottom: 2px solid #bdbdbd;
+
+    &__cell
+      padding 6px 0px
+      border-bottom: 0px
+
+    .cell__date
+      grid-area: date
+
+    .cell__type
+      grid-area: type
+
+    .cell__status
+      grid-area: status
+      align-self: center
+
+    .cell__action
+      display none
