[UPDATE] Sets form validation and changes how to storage information

--- a/src/styles/components/General.styl
+++ b/src/styles/components/General.styl
@@ -68,3 +68,8 @@ body
 .styles-caption
   font-family: "Roboto"
   font-size: 12px
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button 
+  -webkit-appearance: none;
+  margin: 0;
