--- a/src/styles/components/MedicalHistoryForm.styl
+++ b/src/styles/components/MedicalHistoryForm.styl
@@ -49,3 +49,19 @@
     background-color: accent-color
     margin: 20px 0
 
+  &__examButton
+    display: none
+
+
+@media (max-width: 1100px)
+  .medicalHistoryForm
+
+    &__examButton
+      display: block
+
+
+@media (max-width: 600px)
+  .medicalHistoryForm
+
+    &__form
+      grid-template-columns: 1fr
