--- a/src/styles/components/ResultsForm.styl
+++ b/src/styles/components/ResultsForm.styl
@@ -34,3 +34,11 @@
   &__submitBtn
     margin-top: 20px
     background-color: accent-color
+
+
+@media (max-width: 500px)
+  .resultsCard
+    margin-bottom: 25px
+
+    &__form
+      grid-template-columns: 1fr
