--- a/src/styles/pages/MedicalUserExams.styl
+++ b/src/styles/pages/MedicalUserExams.styl
@@ -31,7 +31,7 @@
     background-color secondary-color
     color dark-background-text
     align-items center
-    min-width 250px
+    min-width 300px
     width 50%
     padding 25px 50px
     margin 25px auto
@@ -66,3 +66,12 @@
 
   span
     margin 0 5px
+
+@media (max-width: 1100px)
+  .Container
+    aside
+      display: none
+
+    main
+      display: block
+      padding 25px 5%
