--- a/src/styles/pages/MedicalViewUSerInfo.styl
+++ b/src/styles/pages/MedicalViewUSerInfo.styl
@@ -53,7 +53,7 @@
     align-items center
     background-color white
     border-radius 5px
-    width 600px
+    max-width 600px
     padding: 40px
     margin-bottom: 20px
     box-shadow: 4px 13px 5px -6px #bdbdbd;
@@ -72,3 +72,23 @@
 
 .Add
   color dark-primary-color
+
+
+@media (max-width: 1100px)
+
+  .cardInfoContainer
+    display: grid;
+    justify-content: center;
+
+  .Info
+    &__aside
+      display: none
+
+    &__mainContainer
+      justify-content: center
+
+@media (max-width: 600px)
+
+  .Info
+    &__mainContainer
+      padding: 20px
