[UPDATE] Makes login view responsive and fixs logo issue

--- a/src/styles/pages/Login.styl
+++ b/src/styles/pages/Login.styl
@@ -33,3 +33,14 @@
   bottom: 0;
   width: 100%;
   height: 40px; */
+
+@media screen and (max-width: 1000px)
+
+  .Login
+    background-color: #33adcc
+
+    &__info
+      display: none
+
+    &__form
+      width 100%
