--- a/src/styles/components/LoginForm.styl
+++ b/src/styles/components/LoginForm.styl
@@ -13,6 +13,9 @@
   max-width 250px
   margin 25px
 
+  &__logo
+    display: none
+
   &__title
     text-transform uppercase
     font-size 22px
@@ -26,3 +29,14 @@
     height 25px
     margin 5px 0
     padding 5px 10px
+
+@media screen and (max-width: 1000px)
+
+  .LoginForm
+
+    &__logo
+      display: block
+      margin-bottom: 20px
+
+    &__title
+      display: none
